agregue titulo y parrafo

--- a/clase 14/git.html
+++ b/clase 14/git.html
@@ -8,6 +8,7 @@
     <title>prueba git</title>
 </head>
 <body>
-    
+    <header>probando git</header>
+    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam adipisci impedit aperiam rerum ab, consequuntur nisi dolore eveniet sapiente. Enim, impedit amet numquam molestiae doloribus laboriosam pariatur? Perspiciatis, sint voluptatibus.git s</h1>
 </body>
 </html>
